--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
