--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Saleem Castle",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.1.1",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.22"
   },
   "engines": {
